# State-Estimator-for-Soft-Arm-SESA

./: README.md
data analysis/: main.ipynb
data processing/: main.ipynb
paper latex code/: 1 header.tex  2 abstract.tex  3 intro.tex  4 methods.tex  5 experiments.tex  6 results.tex  7 discussion.tex  8 conclusion.tex  bibli.bib  main.tex
paper latex code/unused/: 3 intro_draft.tex
report/: main.tex
report/Chapters/1 abstract/: Abstract.tex
report/Chapters/2 introduction/: 1 state_of_the_art.tex
report/Chapters/3 methods/: 1 imu.tex  2 pcc with quaternions.tex  3 rigid_body.tex  4 ppc_ext_RB.tex
report/Chapters/4 experimentation/: 1 setup.tex  2 ros.tex  3 data acquisition.tex
report/Chapters/6 discussion/: 1 performances.tex  2 sources of error.tex  (+1 more)
report/Docslatex/: titlepage.tex
ros_packages/: README.md
ros_packages/GUI/: sesa.ui  ui2py.sh
ros_packages/sesa/: CMakeLists.txt
ros_packages/sesa/bags/: freshly_recorded_data.bag
ros_packages/sesa/config/: my_clean_config.yaml  my_config.yaml  my_config_copy.yaml
ros_packages/sesa/launch/: calibrate.launch  launch.py  my_launch.launch  stream.launch
ros_packages/sesa/msg/: acc.msg  calibration_status.msg  marker.msg
ros_packages/sesa/rviz/: myrobot.urdf.xacro
ros_packages/sesa/saved/bags/: prev_saved_data_to_play.bag
ros_packages/sesa/scripts/sesa/: add_params.py  estimator.py  launch.py  save_calibration.py
ros_packages/sesa/src/: GUI_class.py  make_my_GUI.py  make_my_urdf.py
ros_packages/sesa_firmware/: CMakeLists.txt  README.md
sesa/: CMakeLists.txt  package.xml
sesa/config/: my_params.yaml
sesa/launch/: calibrate.launch  launch.py  robot_description.launch  stream.launch
sesa/msg/: calib.msg  quat.msg
sesa/rviz/: urdf.rviz
sesa_firmware/: package.xml
(+33 files in other folders)
